Revert "Fixing missing background button-grad.png"
This reverts commit 7ba215b816f6ac73701ea71acb6496e0c55bab46.

--- a/ui/css/pods-ui-list-table.css
+++ b/ui/css/pods-ui-list-table.css
@@ -88,7 +88,7 @@
 }
 
 .pods-ui-filter-bar-primary ul.subsubsub li a.current:active {
-    background: #21759B repeat-x scroll left top;
+    background: #21759B url(/wp-admin/images/button-grad-active.png) repeat-x scroll left top;
 }
 
 .pods-ui-filter-bar-primary ul.subsubsub li a.current:hover,
